@@ -451,4 +451,11 @@ f='(GFp0 | FGp1) & (GF!p1 | FGp2) & (GF!p2 | FG!p0)'
 test 1,8,3 = `ltl2tgba -G -D "$f" --stats=%s,%e,%a`
 test 1,3,2 = `ltl2tgba -G -D "(GFp0 | FGp1)" --stats=%s,%e,%a`
 
+# Handling of Xor and <-> by ltl-split and -D -G.
+res=`ltl2tgba -D -G 'X((Fa & Fb & Fc & Fd) <-> GFe)' --stats='%s %g'`
+test "$res" = "17 (Inf(0) & Fin(1)) | (Fin(0) & Inf(1))"
+res=`ltl2tgba -D -G 'X((Fa & Fb & Fc & Fd) ^ GFe)' --stats='%s %g'`
+test "$res" = "17 (Inf(0)&Inf(1)) | (Fin(0) & Fin(1))"
+ltlcross 'ltl2tgba -D -G' 'ltl2tgba -G' -f '(Fa & Fb & Fc & Fd) ^ GFe'
+
 :
